# axel

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  REVIEW.md  SPEC.md
crates/axel/: Cargo.toml
crates/axel/examples/: smoke_test.rs
crates/axel/src/: brain.rs  config.rs  error.rs  extension.rs  inject.rs  lib.rs  main.rs  mcp.rs  r8.rs  search.rs
crates/axel/src/consolidate/: mod.rs  prune.rs  reindex.rs  reorganize.rs  strengthen.rs
crates/axel/tests/: brain_tests.rs  consolidation_tests.rs
crates/memkoshi/: Cargo.toml
crates/memkoshi/src/: decay.rs  error.rs  lib.rs  memory.rs  patterns.rs  pipeline.rs  security.rs  storage.rs
crates/memkoshi/tests/: decay_tests.rs  memory_tests.rs  pattern_tests.rs  update_tests.rs
crates/stelline/: Cargo.toml
crates/stelline/src/: context.rs  dedup.rs  error.rs  extractor.rs  lib.rs  parser.rs  quality.rs
crates/stelline/tests/: stelline_tests.rs
crates/velocirag/: Cargo.toml
crates/velocirag/src/: analyzers.rs  chunker.rs  db.rs  download.rs  embedder.rs  error.rs  frontmatter.rs  graph.rs  index.rs  lib.rs  pipeline.rs  reranker.rs  rrf.rs  search.rs  variants.rs
crates/velocirag/tests/: temporal_graph_tests.rs
docs/: CONSOLIDATION.md  ROADMAP.md
reviews/: FIXES.md  architecture.md  correctness.md  performance.md  robustness.md  security.md  testing.md  ux.md
reviews2/: FIXES.md  architecture.md  performance.md  research.md  robustness.md  security.md  testing.md  ux.md
scripts/: index-all-sources.sh  sync-brain.sh
