[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Haseeb Khalid"]
license = "MIT"

[workspace.dependencies]
# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab", "blob"] }

# Vector search (HNSW)
usearch = "2"

# Embeddings (ONNX Runtime)
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = "0.21"
ndarray = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing / IDs / Security
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
hex = "0.4"

# Utilities
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ordered-float = "4"
rayon = "1"
regex = "1"
walkdir = "2"
pulldown-cmark = "0.12"
dirs = "6"
rand = "0.9"
tracing = "0.1"

# Testing
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
