[package]
name = "axel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Portable agent intelligence — search, memory, session awareness in one .r8 file"

[[bin]]
name = "axel"
path = "src/main.rs"

[dependencies]
velocirag = { path = "../velocirag" }
axel-memkoshi = { path = "../memkoshi" }
rusqlite = { workspace = true }
usearch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
