[package]
name = "axel-memkoshi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Agent memory system — staging, patterns, evolution, decay"

[dependencies]
velocirag = { path = "../velocirag" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
