[package]
name = "axel-stelline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Session intelligence — transcript parsing, memory extraction, context updates"

[dependencies]
velocirag = { path = "../velocirag" }
axel-memkoshi = { path = "../memkoshi" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
